--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/node": "^20",
